--- a/Lab.EF/Lab.EF.UI/App.config
+++ b/Lab.EF/Lab.EF.UI/App.config
@@ -12,4 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="NorthwindConnection" connectionString="data source=PEGASUS\SQLEXPRESS;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
