--- a/Lab.EF/Lab.EF.UI/Lab.EF.UI.csproj
+++ b/Lab.EF/Lab.EF.UI/Lab.EF.UI.csproj
@@ -60,6 +60,20 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lab.EF.Data\Lab.EF.Data.csproj">
+      <Project>{45f0636c-6a1b-40ce-b6c6-93e3b8cad3a3}</Project>
+      <Name>Lab.EF.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lab.EF.Entities\Lab.EF.Entities.csproj">
+      <Project>{C6024822-4D5E-4C70-BCE1-5C08970F4CD6}</Project>
+      <Name>Lab.EF.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lab.EF.Logic\Lab.EF.Logic.csproj">
+      <Project>{0AE6246C-7922-455A-AF5E-A7E3EA0BD795}</Project>
+      <Name>Lab.EF.Logic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
