--- a/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
+++ b/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categories.cs" />
+    <Compile Include="ClassQuerys\CustomerJoinOrder.cs" />
+    <Compile Include="ClassQuerys\CustomerName.cs" />
     <Compile Include="Customers.cs" />
     <Compile Include="Orders.cs" />
     <Compile Include="Products.cs" />
