--- a/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
+++ b/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categories.cs" />
+    <Compile Include="ClassQuerys\CategoryJoinProduct.cs" />
     <Compile Include="ClassQuerys\CustomerJoinOrder.cs" />
     <Compile Include="ClassQuerys\CustomerName.cs" />
     <Compile Include="Customers.cs" />
