--- a/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
+++ b/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
@@ -52,8 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categories.cs" />
-    <Compile Include="Customers.cs" />
-    <Compile Include="Orders.cs" />
+    <Compile Include="Employees.cs" />
     <Compile Include="Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Region.cs" />
