--- a/Lab.EF/Lab.EF.Logic/Lab.EF.Logic.csproj
+++ b/Lab.EF/Lab.EF.Logic/Lab.EF.Logic.csproj
@@ -53,9 +53,8 @@
   <ItemGroup>
     <Compile Include="BaseLogic.cs" />
     <Compile Include="CategoriesLogic.cs" />
-    <Compile Include="CustomersLogic.cs" />
+    <Compile Include="EmployeesLogic.cs" />
     <Compile Include="IABMLogic.cs" />
-    <Compile Include="OrdersLogic.cs" />
     <Compile Include="ProductsLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionLogic.cs" />
