--- a/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
+++ b/Lab.EF/Lab.EF.Entities/Lab.EF.Entities.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Categories.cs" />
     <Compile Include="Employees.cs" />
+    <Compile Include="Orders.cs" />
     <Compile Include="Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Region.cs" />
