--- a/angular/package.json
+++ b/angular/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.0",
+    "@angular/animations": "^12.0.1",
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
@@ -20,7 +20,11 @@
     "@angular/router": "~12.0.0",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
+    "ng-bootstrap-icons": "^1.3.0",
+    "ngx-bootstrap-icons": "^1.5.0",
+    "ngx-toastr": "^14.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
