--- a/Lab.EF/Lab.EF.WAPI/Lab.EF.WAPI.csproj
+++ b/Lab.EF/Lab.EF.WAPI/Lab.EF.WAPI.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CategoriesView.cs" />
     <Compile Include="Models\EmployeesView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
